--- a/Taylr/UserInterface/Me/Me.storyboard
+++ b/Taylr/UserInterface/Me/Me.storyboard
@@ -14,7 +14,7 @@
         <!--Auto Complete Data Source-->
         <scene sceneID="CCY-8A-vmM">
             <objects>
-                <viewController id="mcp-Sh-vTg" customClass="EditHashtagsViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="mcp-Sh-vTg" customClass="EditHashtagsViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="un5-vE-2AL"/>
                         <viewControllerLayoutGuide type="bottom" id="8u6-rk-AbR"/>
@@ -30,11 +30,11 @@
                                     <size key="itemSize" width="72" height="35"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="16" minY="16" maxX="16" maxY="16"/>
+                                    <inset key="sectionInset" minX="16" minY="0.0" maxX="16" maxY="16"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HashtagCell" id="tzV-p3-eEg" customClass="HashtagCell" customModule="Taylr" customModuleProvider="target">
-                                        <rect key="frame" x="16" y="80" width="72" height="35"/>
+                                        <rect key="frame" x="16" y="0.0" width="72" height="35"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="72" height="35"/>
